--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "packages": [
       "packages/**/*"
     ]
+  },
+  "devDependencies": {
+    "lerna": "^3.19.0"
+  },
+  "scripts": {
+    "publish": "lerna publish"
   }
 }
