--- a/packages/data-driven-component/package.json
+++ b/packages/data-driven-component/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/data-driven-component",
   "license": "Apache-2.0",
   "dependencies": {
+    "@dpc-sdp/yourvic-maps": "^1.0.3",
     "path": "^0.12.7"
   },
   "gitHead": "ade96a3b26d212314ef0487bbda84821f26edc7c"
