--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "vuex-mock-store": "^0.0.7"
   },
   "scripts": {
-    "publish": "lerna publish",
+    "lerna:publish": "lerna publish",
     "start:storybook": "cd src && yarn start",
     "build:storybook": "cd src && yarn build-storybook",
     "lint": "sass-lint && yarn lint:es",
