--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest": "^24.9.0",
     "jest-canvas-mock": "^2.2.0",
     "jest-css-modules": "^2.1.0",
+    "jest-junit": "^10.0.0",
     "lerna": "^3.0.0",
     "markdown-loader-jest": "^0.1.1",
     "mockdate": "^2.0.3",
