--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.0
 
 jobs:
   build:
-    context: Ripple
+    context: yourvictoria.vic.gov.au
     docker:
       - image: cypress/base:10
         environment:
@@ -32,7 +32,7 @@ jobs:
           paths: .
 
   test:
-    context: Ripple
+    context: yourvictoria.vic.gov.au
     docker:
       - image: cypress/base:10
         environment:
