--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,5 @@ workflows:
   version: 2
   commit:
     jobs:
-      - build      
-      - test:
-          requires:
-            - build  
+      - test
 
