--- a/packages/BarChart/package.json
+++ b/packages/BarChart/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "vue-chartjs": "^3.5.0"
   }
 }
