--- a/src/package.json
+++ b/src/package.json
@@ -8,8 +8,9 @@
     "build-storybook": "NODE_ENV=production build-storybook -c .storybook -s ./static -o ./public"
   },
   "dependencies": {
-    "@dpc-sdp/ripple-global": "^1.4.0",
-    "@dpc-sdp/ripple-markup": "^1.4.0",
+    "@dpc-sdp/ripple-global": "^1.8.0",
+    "@dpc-sdp/ripple-markup": "^1.8.0",
+    "@dpc-sdp/ripple-grid": "^1.8.0",
     "@dpc-sdp/yourvic-map-core": "1.1.3",
     "@storybook/vue": "^5.3.18",
     "vue": "^2.6.11"
