--- a/packages/yourvictoria-global/package.json
+++ b/packages/yourvictoria-global/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@dpc-sdp/core",
+  "name": "@dpc-sdp/yourvictoria-core",
   "version": "0.1.0",
   "description": "Core package for Your Victoria",
   "main": "index.js",
   "license": "Apache-2.0",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/"
+  "repository": "https://github.com/dpc-sdp/",
+  "private": true
 }
