--- a/packages/BarChart/package.json
+++ b/packages/BarChart/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/",
+  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/BarChart",
   "publishConfig": {
     "access": "public"
   },
