--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@dpc-sdp/yourvictoria-core",
+  "name": "@dpc-sdp/yourvic-global",
   "version": "0.1.0",
   "description": "Core package for Your Victoria",
   "main": "index.js",
   "license": "Apache-2.0",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/",
+  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/global",
   "private": true
 }
