--- a/packages/BarChart/package.json
+++ b/packages/BarChart/package.json
@@ -10,6 +10,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@dpc-sdp/ripple-global": "^1.8.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "lodash.merge": "^4.6.2",
