--- a/packages/BarChart/package.json
+++ b/packages/BarChart/package.json
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/ripple-global": "^1.8.0",
+    "@dpc-sdp/yourvic-global": "^1.1.3",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "lodash.merge": "^4.6.2",
