--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@dpc-sdp/yourvic-global",
-  "version": "0.1.0",
+  "version": "1.1.3",
   "description": "Core package for Your Victoria",
   "main": "index.js",
   "license": "Apache-2.0",
   "homepage": "https://ripple.sdp.vic.gov.au",
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/global",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@dpc-sdp/ripple-global": "^1.8.0"
+  }
 }
