--- a/packages/LineChart/package.json
+++ b/packages/LineChart/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "@dpc-sdp/yourvic-bar-chart",
+  "name": "@dpc-sdp/yourvic-line-chart",
   "version": "1.1.3",
-  "description": "A bar chart component.",
+  "description": "A line chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/BarChart",
+  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/LineChart",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@dpc-sdp/yourvic-global": "^1.1.3",
     "chart.js": "^2.9.3",
-    "chartjs-plugin-datalabels": "^0.7.0",
     "lodash.merge": "^4.6.2",
     "vue-chartjs": "^3.5.0"
   }
