--- a/packages/map-core/package.json
+++ b/packages/map-core/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@dpc-sdp/ripple-global": "^1.8.0",
     "ol": "^6.1.1",
-    "ol-ext": "^3.1.7"
+    "ol-ext": "^3.1.7",
+    "proj4": "^2.6.2"
   },
   "gitHead": "ade96a3b26d212314ef0487bbda84821f26edc7c"
 }
