--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-preset-vue": "^2.0.2",
     "core-js": "^2.6.5",
+    "cypress": "^4.7.0",
     "eslint": "^5.11.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-junit": "^1.0.1",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-node": "^5.2.0",
@@ -45,8 +47,9 @@
     "lerna": "^3.0.0",
     "markdown-loader-jest": "^0.1.1",
     "mockdate": "^2.0.3",
+    "nuxt": "^2.12.2",
     "sass-lint": "^1.12.1",
-    "start-server-and-test": "^1.7.11",
+    "start-server-and-test": "^1.11.0",
     "vue-jest": "^3.0.4",
     "vuex-mock-store": "^0.0.7"
   },
@@ -57,7 +60,11 @@
     "lint": "sass-lint && yarn lint:es",
     "lint:es": "eslint --ext .js,.vue . --max-warnings 0",
     "lint:fix": "eslint --ext .js,.vue . --fix",
-    "test:unit": "jest --colors"
+    "test:unit": "jest --colors",
+    "test:nuxt": "start-server-and-test nuxt:dev http://localhost:3000 cy:run",
+    "nuxt:dev": "nuxt test/nuxt/fixture",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open"
   },
   "husky": {
     "hooks": {
