--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.12.0",
     "sass-lint": "^1.12.1",
     "sass-loader": "^7.1.0",
+    "style-loader": "^1.2.1",
     "svg-sprite-loader": "^3.7.3",
     "svgo": "^1.2.2",
     "svgo-loader": "^2.2.1",
