--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@dpc-sdp/ripple-grid": "^1.8.0",
     "@dpc-sdp/yourvic-map-core": "1.1.3",
     "@storybook/vue": "^5.3.18",
+    "style-loader": "^1.2.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
