--- a/packages/map-core/package.json
+++ b/packages/map-core/package.json
@@ -7,8 +7,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "ol": "^6.1.1",
-    "ol-ext": "^3.1.7",
+    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "ol": "^6.3.1",
+    "ol-ext": "^3.1.12",
     "proj4": "^2.6.2"
   },
   "gitHead": "ade96a3b26d212314ef0487bbda84821f26edc7c"
