--- a/packages/map-core/package.json
+++ b/packages/map-core/package.json
@@ -10,6 +10,7 @@
     "@dpc-sdp/yourvic-global": "^1.1.3",
     "ol": "^6.3.1",
     "ol-ext": "^3.1.12",
+    "ol-mapbox-style": "^6.1.2",
     "proj4": "^2.6.2"
   },
   "gitHead": "ade96a3b26d212314ef0487bbda84821f26edc7c"
