--- a/packages/DataBlock/package.json
+++ b/packages/DataBlock/package.json
@@ -10,6 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "^1.1.3"
+    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/ripple-icon": "^1.8.0"
   }
 }
