--- a/src/package.json
+++ b/src/package.json
@@ -31,9 +31,11 @@
     "eslint-loader": "^2.1.2",
     "file-loader": "^4.0.0",
     "glob-fs": "^0.1.7",
+    "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.12.0",
     "sass-lint": "^1.12.1",
     "sass-loader": "^7.1.0",
+    "style-loader": "^1.2.1",
     "svg-sprite-loader": "^3.7.3",
     "svgo": "^1.2.2",
     "svgo-loader": "^2.2.1",
