--- a/packages/AddressSearch/package.json
+++ b/packages/AddressSearch/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dpc-sdp/yourvic-addresssearch",
   "version": "1.1.3",
-  "description": "An address search component.",
+  "description": "An address search component for Victoria.",
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
