--- a/packages/data-driven-component/package.json
+++ b/packages/data-driven-component/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@dpc-sdp/yourvic-data-driven-component",
-  "version": "1.1.3",
+  "version": "1.1.3-next.2",
   "main": "module.js",
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/data-driven-component",
   "license": "Apache-2.0",
   "dependencies": {
-    "@dpc-sdp/yourvic-maps": "1.1.3",
+    "@dpc-sdp/yourvic-maps": "1.1.3-next.2",
     "path": "^0.12.7"
   }
 }
