--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dpc-sdp/yourvic-storybook",
   "description": "Storybook instance for yourvictoria component testing",
-  "version": "1.1.3",
+  "version": "1.1.3-next.2",
   "private": true,
   "scripts": {
     "start": "start-storybook -p 6006 -s ./static",
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "@dpc-sdp/ripple-markup": "^1.8.0",
     "@dpc-sdp/ripple-grid": "^1.8.0",
-    "@dpc-sdp/yourvic-map-core": "1.1.3",
+    "@dpc-sdp/ripple-markup": "^1.8.0",
+    "@dpc-sdp/yourvic-map-core": "1.1.3-next.2",
     "@storybook/vue": "^5.3.18",
     "style-loader": "^1.2.1",
     "vue": "^2.6.11"
@@ -24,6 +24,7 @@
     "@storybook/addon-storyshots": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/vue": "^5.3.18",
+    "@vue/babel-preset-jsx": "^1.1.2",
     "axe-core": "^3.2.2",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
@@ -43,8 +44,7 @@
     "url-loader": "^2.0.1",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "@vue/babel-preset-jsx": "^1.1.2"
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
