--- a/packages/UMDBundle/package.json
+++ b/packages/UMDBundle/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@dpc-sdp/yourvic-bar-chart",
+  "name": "@dpc-sdp/yourvic-umd-bundle",
   "version": "1.1.3",
-  "description": "A bar chart component.",
+  "description": "UMD Bundle of YourVictoria components",
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/BarChart",
+  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/UMDBundle",
   "publishConfig": {
     "access": "public"
   },
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@dpc-sdp/yourvic-global": "^1.1.3",
-    "chart.js": "^2.9.3",
-    "chartjs-plugin-datalabels": "^0.7.0",
-    "lodash.merge": "^4.6.2",
-    "vue-chartjs": "^3.5.0"
+    "@dpc-sdp/ripple-global": "^1.8.0",
+    "@dpc-sdp/yourvic-map-core": "^1.1.3",
+    "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
+    "@dpc-sdp/yourvic-toggle-list": "^1.1.3"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
