--- a/packages/data-driven-component/package.json
+++ b/packages/data-driven-component/package.json
@@ -5,7 +5,18 @@
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/data-driven-component",
   "license": "Apache-2.0",
   "dependencies": {
-    "@dpc-sdp/yourvic-maps": "1.1.3",
-    "path": "^0.12.7"
+    "@dpc-sdp/yourvic-map-core": "1.1.3",
+    "@dpc-sdp/yourvic-bar-chart": "1.1.3",
+    "@dpc-sdp/yourvic-line-chart": "1.1.3",
+    "@dpc-sdp/yourvic-pie-chart": "1.1.3",
+    "@dpc-sdp/yourvic-treemap": "1.1.3",
+    "@dpc-sdp/yourvic-toggle-list": "1.1.3",
+    "@dpc-sdp/yourvic-addresssearch": "1.1.3",
+    "@dpc-sdp/yourvic-areasearch": "1.1.3",
+    "@dpc-sdp/yourvic-autocomplete": "1.1.3",
+    "@dpc-sdp/yourvic-data-block": "1.1.3"
+  },
+  "peerDependencies": {
+    "@dpc-sdp/ripple-nuxt-tide": "1.x"
   }
 }
