--- a/packages/Example1/package.json
+++ b/packages/Example1/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dpc-sdp/yourvic-areasearch": "^1.1.3",
     "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-data-block": "^1.1.3"
+    "@dpc-sdp/yourvic-data-block": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "^1.1.3"
   }
 }
