--- a/packages/Example2/package.json
+++ b/packages/Example2/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dpc-sdp/yourvic-areasearch": "^1.1.3",
-    "@dpc-sdp/yourvic-map-core": "^1.1.3"
+    "@dpc-sdp/yourvic-map-core": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "^1.1.3"
   }
 }
