--- a/packages/Examples/package.json
+++ b/packages/Examples/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dpc-sdp/yourvic-example1",
+  "name": "@dpc-sdp/yourvic-examples",
   "version": "1.1.3",
-  "description": "A component showcasing the area search, data block and bar chart components",
+  "description": "A component showcasing the map, area search, data block and bar chart components",
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
@@ -13,6 +13,8 @@
     "@dpc-sdp/yourvic-areasearch": "^1.1.3",
     "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
     "@dpc-sdp/yourvic-data-block": "^1.1.3",
-    "@dpc-sdp/yourvic-global": "^1.1.3"
+    "@dpc-sdp/yourvic-map-core": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "node-fetch": "^2.6.0"
   }
 }
