--- a/packages/Examples/package.json
+++ b/packages/Examples/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@dpc-sdp/yourvic-examples",
   "version": "1.1.3",
-  "description": "A component showcasing the map, area search, data block and bar chart components",
+  "description": "Examples showcasing the map, area search, data block and bar chart components",
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/Example1",
+  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/Examples",
   "publishConfig": {
     "access": "public"
   },
