--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@dpc-sdp/yourvic-umd-bundle",
+  "name": "@dpc-sdp/yourvic-bundle",
   "version": "1.1.3",
-  "description": "UMD Bundle of YourVictoria components",
+  "description": "Bundle (UMD) of YourVictoria components",
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/UMDBundle",
+  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/Bundle",
   "publishConfig": {
     "access": "public"
   },
