--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -15,9 +15,16 @@
   "dependencies": {
     "@dpc-sdp/yourvic-global": "^1.1.3",
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "@dpc-sdp/yourvic-map-core": "^1.1.3",
+    "@dpc-sdp/yourvic-addresssearch": "^1.1.3",
+    "@dpc-sdp/yourvic-areasearch": "^1.1.3",
+    "@dpc-sdp/yourvic-autocomplete": "^1.1.3",
     "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-toggle-list": "^1.1.3"
+    "@dpc-sdp/yourvic-data-block": "^1.1.3",
+    "@dpc-sdp/yourvic-line-chart": "^1.1.3",
+    "@dpc-sdp/yourvic-pie-chart": "^1.1.3",
+    "@dpc-sdp/yourvic-map-core": "^1.1.3",
+    "@dpc-sdp/yourvic-toggle-list": "^1.1.3",
+    "@dpc-sdp/yourvic-treemap": "^1.1.3"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
