--- a/packages/AutoComplete/package.json
+++ b/packages/AutoComplete/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@dpc-sdp/yourvic-global": "^1.1.3",
     "lodash.debounce": "^4.0.8",
-    "@dpc-sdp/ripple-icon": "^1.8.0",
-    "vue-simple-spinner": "^1.2.10"
+    "@dpc-sdp/ripple-icon": "^1.8.0"
   }
 }
