--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.3",
   "description": "Bundle (UMD) of YourVictoria components",
   "license": "Apache-2.0",
-  "main": "index.js",
+  "main": "dist/yourvic-bundle.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/Bundle",
   "publishConfig": {
