--- a/packages/Examples/package.json
+++ b/packages/Examples/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-examples",
-  "version": "1.1.3",
+  "version": "1.1.3-next.5",
   "description": "Examples showcasing the map, area search, data block and bar chart components",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,11 +10,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-areasearch": "^1.1.3",
-    "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-data-block": "^1.1.3",
-    "@dpc-sdp/yourvic-map-core": "^1.1.3",
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-areasearch": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-bar-chart": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-data-block": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-map-core": "1.1.3-next.5",
     "node-fetch": "^2.6.0"
   }
 }
