--- a/packages/TreeMap/package.json
+++ b/packages/TreeMap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-treemap",
-  "version": "1.1.3",
+  "version": "1.1.3-next.5",
   "description": "A tree map chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
