--- a/packages/data-driven-component/package.json
+++ b/packages/data-driven-component/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@dpc-sdp/yourvic-data-driven-component",
-  "version": "1.1.3",
+  "version": "1.1.3-next.5",
   "main": "module.js",
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/data-driven-component",
   "license": "Apache-2.0",
   "dependencies": {
-    "@dpc-sdp/yourvic-map-core": "1.1.3",
-    "@dpc-sdp/yourvic-bar-chart": "1.1.3",
-    "@dpc-sdp/yourvic-line-chart": "1.1.3",
-    "@dpc-sdp/yourvic-pie-chart": "1.1.3",
-    "@dpc-sdp/yourvic-treemap": "1.1.3",
-    "@dpc-sdp/yourvic-toggle-list": "1.1.3",
-    "@dpc-sdp/yourvic-addresssearch": "1.1.3",
-    "@dpc-sdp/yourvic-areasearch": "1.1.3",
-    "@dpc-sdp/yourvic-autocomplete": "1.1.3",
-    "@dpc-sdp/yourvic-data-block": "1.1.3"
+    "@dpc-sdp/yourvic-addresssearch": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-areasearch": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-autocomplete": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-bar-chart": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-data-block": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-line-chart": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-map-core": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-pie-chart": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-toggle-list": "1.1.3-next.5",
+    "@dpc-sdp/yourvic-treemap": "1.1.3-next.5"
   },
   "peerDependencies": {
     "@dpc-sdp/ripple-nuxt-tide": "1.x"
