--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-global",
-  "version": "1.1.3",
+  "version": "1.1.3-next.6",
   "description": "Core package for Your Victoria",
   "main": "index.js",
   "license": "Apache-2.0",
