--- a/packages/map-core/package.json
+++ b/packages/map-core/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@dpc-sdp/yourvic-map-core",
-  "version": "1.1.3",
+  "version": "1.1.3-next.6",
   "description": "Core functions of map for yourvictoria.vic.gov.au",
   "main": "index.js",
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/map-core",
   "license": "Apache-2.0",
   "dependencies": {
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.6",
     "ol": "^6.3.1",
     "ol-ext": "^3.1.12",
     "ol-mapbox-style": "^6.1.2",
