--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "workspaces": {
     "packages": [
       "packages/**/*",
-      "src"
+      "src",
+      "test/nuxt"
     ],
     "nohoist": [
       "src"
@@ -48,7 +49,6 @@
     "lerna": "^3.0.0",
     "markdown-loader-jest": "^0.1.1",
     "mockdate": "^2.0.3",
-    "nuxt": "^2.12.2",
     "sass-lint": "^1.12.1",
     "start-server-and-test": "^1.11.0",
     "vue-jest": "^3.0.4",
