--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -7,6 +7,7 @@
   "homepage": "https://ripple.sdp.vic.gov.au",
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/global",
   "dependencies": {
-    "@dpc-sdp/ripple-global": "^1.8.0"
+    "@dpc-sdp/ripple-global": "^1.8.0",
+    "axios": "^0.19.2"
   }
 }
