--- a/packages/maps/package.json
+++ b/packages/maps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-maps",
-  "version": "1.1.3",
+  "version": "1.1.3-next.8",
   "description": "Collection of Maps for yourvictoria.vic.gov.au",
   "main": "index.js",
   "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/maps",
@@ -11,6 +11,6 @@
     "@dpc-sdp/ripple-icon": "^1.4.0",
     "@dpc-sdp/ripple-link": "^1.4.0",
     "@dpc-sdp/ripple-markup": "^1.4.0",
-    "@dpc-sdp/yourvic-map-core": "1.1.3"
+    "@dpc-sdp/yourvic-map-core": "1.1.3-next.8"
   }
 }
