--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -25,7 +25,8 @@
     "@dpc-sdp/yourvic-pie-chart": "1.1.3",
     "@dpc-sdp/yourvic-map-core": "1.1.3",
     "@dpc-sdp/yourvic-toggle-list": "1.1.3",
-    "@dpc-sdp/yourvic-treemap": "1.1.3"
+    "@dpc-sdp/yourvic-treemap": "1.1.3",
+    "@dpc-sdp/yourvic-examples": "1.1.3"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
