--- a/packages/PieChart/package.json
+++ b/packages/PieChart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-pie-chart",
-  "version": "1.1.3",
+  "version": "1.1.3-next.10",
   "description": "A pie chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.10",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "lodash.merge": "^4.6.2",
