--- a/packages/ExampleSite/package.json
+++ b/packages/ExampleSite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-example-site",
-  "version": "1.1.3",
+  "version": "1.1.3-next.9",
   "description": "Example page showcasing various components",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,13 +10,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-line-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-pie-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-treemap": "^1.1.3",
-    "@dpc-sdp/yourvic-data-block": "^1.1.3",
-    "@dpc-sdp/yourvic-map-core": "^1.1.3",
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-bar-chart": "1.1.3-next.9",
+    "@dpc-sdp/yourvic-data-block": "1.1.3-next.9",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.9",
+    "@dpc-sdp/yourvic-line-chart": "1.1.3-next.9",
+    "@dpc-sdp/yourvic-map-core": "1.1.3-next.9",
+    "@dpc-sdp/yourvic-pie-chart": "1.1.3-next.9",
+    "@dpc-sdp/yourvic-treemap": "1.1.3-next.9",
     "axios": "^0.19.2"
   }
 }
