--- a/packages/LineChart/package.json
+++ b/packages/LineChart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-line-chart",
-  "version": "1.1.3",
+  "version": "1.1.3-next.15",
   "description": "A line chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.15",
     "chart.js": "^2.9.3",
     "lodash.merge": "^4.6.2",
     "vue-chartjs": "^3.5.0"
