feat: vue example app builds (#47)
* feat: initial setup of vue example app for components

* refactor: vue cli upgrade

* feat: updated docker build for vue example app

* fix: update eslintignore for example app

* fix: align package versions

* refactor: tidy up some unnecessary config carried through from ripple example

Co-authored-by: Brent Schiller <bschiller@geoplex.com.au>

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,7 +2,11 @@
 
 /packages/**/node_modules
 
+/examples/**/node_modules
+
 # ignore storybook files
 /src
 
 /packages/**/dist
+
+/examples/**/dist
