--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -18,6 +18,8 @@
     "@dpc-sdp/ripple-grid": "1.8.0",
     "@dpc-sdp/ripple-layout": "1.8.0",
     "@dpc-sdp/ripple-site-header": "1.8.0",
+    "@dpc-sdp/ripple-grants": "1.8.0",
+    "@dpc-sdp/ripple-card": "1.8.0",
     "@dpc-sdp/yourvic-bar-chart": "dev",
     "@dpc-sdp/yourvic-map-core": "dev",
     "@dpc-sdp/yourvic-example-site": "dev",
