--- a/packages/ExampleSite/package.json
+++ b/packages/ExampleSite/package.json
@@ -10,13 +10,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-line-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-pie-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-treemap": "1.1.3-next-16",
-    "@dpc-sdp/yourvic-data-block": "^1.1.3",
-    "@dpc-sdp/yourvic-map-core": "^1.1.3",
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-bar-chart": "1.1.3",
+    "@dpc-sdp/yourvic-line-chart": "1.1.3",
+    "@dpc-sdp/yourvic-pie-chart": "1.1.3",
+    "@dpc-sdp/yourvic-treemap": "1.1.3",
+    "@dpc-sdp/yourvic-data-block": "1.1.3",
+    "@dpc-sdp/yourvic-map-core": "1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3",
     "axios": "^0.19.2"
   }
 }
