--- a/packages/AreaSearch/package.json
+++ b/packages/AreaSearch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-areasearch",
-  "version": "1.1.3",
+  "version": "1.1.3-next.17",
   "description": "An area search component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-autocomplete": "^1.1.3",
+    "@dpc-sdp/yourvic-autocomplete": "1.1.3-next.17",
     "axios": "^0.19.2"
   }
 }
