--- a/packages/AddressSearch/package.json
+++ b/packages/AddressSearch/package.json
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-autocomplete": "^1.1.3",
+    "@dpc-sdp/yourvic-autocomplete": "1.1.3",
     "axios": "^0.19.2"
   }
 }
