--- a/packages/AutoComplete/package.json
+++ b/packages/AutoComplete/package.json
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3",
     "lodash.debounce": "^4.0.8",
     "@dpc-sdp/ripple-icon": "^1.8.0"
   }
