--- a/packages/Examples/package.json
+++ b/packages/Examples/package.json
@@ -10,11 +10,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-areasearch": "^1.1.3",
-    "@dpc-sdp/yourvic-bar-chart": "^1.1.3",
-    "@dpc-sdp/yourvic-data-block": "^1.1.3",
-    "@dpc-sdp/yourvic-map-core": "^1.1.3",
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-areasearch": "1.1.3",
+    "@dpc-sdp/yourvic-bar-chart": "1.1.3",
+    "@dpc-sdp/yourvic-data-block": "1.1.3",
+    "@dpc-sdp/yourvic-map-core": "1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3",
     "node-fetch": "^2.6.0"
   }
 }
