--- a/packages/LineChart/package.json
+++ b/packages/LineChart/package.json
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3",
     "chart.js": "^2.9.3",
     "lodash.merge": "^4.6.2",
     "vue-chartjs": "^3.5.0"
