--- a/packages/ToggleList/package.json
+++ b/packages/ToggleList/package.json
@@ -10,6 +10,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "^1.1.3"
+    "@dpc-sdp/yourvic-global": "1.1.3"
   }
 }
