--- a/packages/TreeMap/package.json
+++ b/packages/TreeMap/package.json
@@ -14,6 +14,6 @@
     "chart.js": "^2.9.3",
     "chartjs-chart-treemap": "^0.2.3",
     "lodash.merge": "^4.6.2",
-    "@dpc-sdp/yourvic-global": "^1.1.3"
+    "@dpc-sdp/yourvic-global": "1.1.3"
   }
 }
