--- a/packages/map-core/package.json
+++ b/packages/map-core/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "@dpc-sdp/yourvic-global": "^1.1.3",
+    "@dpc-sdp/yourvic-global": "1.1.3",
     "ol": "^6.3.1",
     "ol-ext": "^3.1.12",
     "ol-mapbox-style": "^6.1.2",
