feat: example site (#53)
* feat: initial setup of vue example app for components

* refactor: vue cli upgrade

* feat: add partailly completed page

* feat: updated docker build for vue example app

* fix: update eslintignore for example app

* fix: align package versions

* fix: update tests and add example site package to example app

* refactor: tidy up some unnecessary config carried through from ripple example

* feat: add more charts and data blocks to example site

* feat: add long descriptions to charts and maps of bundled components

* fix: fix accessibility issues with datablock

* test: update snapshots

* style: fix contrast of data block icon

* fix: fix missing dependencies and package name

* fix: fix import in treemap package

* fix: fix dependency in tree map package

* feat: add pedestrian count map

* feat: add examplesite to example-app and add missing dependencies

* fix: change version of tree-map package

* fix: update package versions

* feat: use api key to fetch live labour force dataset

* feat: update pedestrian map with custom styling

* style: change styles of pedestrian map and legend

* style: fix text alignment issue

* fix: testing fix for build issues with package version changes

* fix: updated yarn.lock to resolve build issues

* fix: make all package versions exact

* fix: fix loading of icons in datablock dependency of vue-example-app

* fix: make toggle list icons optional and remove them from the chart-toggle list example

* feat: tweaks to charts and add new data format

Co-authored-by: Brent Schiller <bschiller@geoplex.com.au>
Co-authored-by: Brent Schiller <b-schiller@users.noreply.github.com>

--- a/packages/TreeMap/package.json
+++ b/packages/TreeMap/package.json
@@ -13,6 +13,7 @@
     "@dpc-sdp/ripple-global": "^1.8.0",
     "chart.js": "^2.9.3",
     "chartjs-chart-treemap": "^0.2.3",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "@dpc-sdp/yourvic-global": "1.1.3"
   }
 }
