--- a/packages/ExampleSite/package.json
+++ b/packages/ExampleSite/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "@dpc-sdp/yourvic-examples",
+  "name": "@dpc-sdp/yourvic-example-site",
   "version": "1.1.3",
-  "description": "Examples showcasing the map, area search, data block and bar chart components",
+  "description": "Example page showcasing various components",
   "license": "Apache-2.0",
   "main": "index.js",
   "homepage": "https://ripple.sdp.vic.gov.au",
-  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/Examples",
+  "repository": "https://github.com/dpc-sdp/yourvictoria-vic-gov-au/tree/master/packages/ExampleSite",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-areasearch": "1.1.3",
     "@dpc-sdp/yourvic-bar-chart": "1.1.3",
+    "@dpc-sdp/yourvic-line-chart": "1.1.3",
+    "@dpc-sdp/yourvic-pie-chart": "1.1.3",
+    "@dpc-sdp/yourvic-treemap": "1.1.3",
     "@dpc-sdp/yourvic-data-block": "1.1.3",
     "@dpc-sdp/yourvic-map-core": "1.1.3",
     "@dpc-sdp/yourvic-global": "1.1.3",
-    "node-fetch": "^2.6.0"
+    "axios": "^0.19.2"
   }
 }
