--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -27,7 +27,8 @@
     "@dpc-sdp/yourvic-toggle-list": "1.1.3",
     "@dpc-sdp/yourvic-treemap": "1.1.3",
     "@dpc-sdp/yourvic-examples": "1.1.3",
-    "whatwg-fetch": "3.2.0"
+    "whatwg-fetch": "3.2.0",
+    "babel-polyfill": "6.26.0"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
