--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-junit": "^1.0.1",
+    "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jest": "^21.17.0",
