--- a/packages/data-driven-component/package.json
+++ b/packages/data-driven-component/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.3",
   "main": "module.js",
   "repository": "https://github.com/dpc-sdp/myvictoria-vic-gov-au/tree/master/packages/data-driven-component",
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "Apache-2.0",
   "dependencies": {
     "@dpc-sdp/myvic-map-core": "1.1.3",
