refactor: prepare example site for release

--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -20,13 +20,13 @@
     "@dpc-sdp/ripple-site-header": "1.8.0",
     "@dpc-sdp/ripple-card": "1.8.0",
     "@dpc-sdp/ripple-grants": "1.8.0",
-    "@dpc-sdp/myvic-bar-chart": "dev",
-    "@dpc-sdp/myvic-line-chart": "dev",
-    "@dpc-sdp/myvic-pie-chart": "dev",
-    "@dpc-sdp/myvic-treemap": "dev",
-    "@dpc-sdp/myvic-data-block": "dev",
-    "@dpc-sdp/myvic-map-core": "dev",
-    "@dpc-sdp/myvic-global": "dev",
+    "@dpc-sdp/myvic-bar-chart": "latest",
+    "@dpc-sdp/myvic-line-chart": "latest",
+    "@dpc-sdp/myvic-pie-chart": "latest",
+    "@dpc-sdp/myvic-treemap": "latest",
+    "@dpc-sdp/myvic-data-block": "latest",
+    "@dpc-sdp/myvic-map-core": "latest",
+    "@dpc-sdp/myvic-global": "latest",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.10"
