--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,23 +18,23 @@ services:
     ports:
       - "9001:3000"
 
-  # # Example site
-  # example:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.example
-  #     args:
-  #       - LAGOON_GIT_BRANCH=
-  #   networks:
-  #     - default
-  #   labels:
-  #     lagoon.type: node
-  #   environment:
-  #     - AMAZEEIO_URL=example.docker.amazee.io
-  #     - AMAZEEIO=AMAZEEIO
-  #     - AMAZEEIO_HTTP_PORT=3000
-  #   ports:
-  #     - "3000:3000"
+  # Example site
+  example:
+    build:
+      context: .
+      dockerfile: Dockerfile.example
+      args:
+        - LAGOON_GIT_BRANCH=
+    networks:
+      - default
+    labels:
+      lagoon.type: node
+    environment:
+      - AMAZEEIO_URL=example.docker.amazee.io
+      - AMAZEEIO=AMAZEEIO
+      - AMAZEEIO_HTTP_PORT=3000
+    ports:
+      - "3000:3000"
 
   # Example site
   proxy:
