chore: update packages and set basemap for address-search-map component (#116)
* chore: add env vars for covid map

* chore: update packages and set basemap for address-search-map component

* chore: add env var for basemap provider

Co-authored-by: Tim Yao <tim.yao@dpc.vic.gov.au>
Co-authored-by: Tim Yao <31641325+tim-yao@users.noreply.github.com>
Co-authored-by: Brent Schiller <bschiller@geoplex.com.au>

--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -16,8 +16,14 @@ RUN yarn install
 # copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY examples/vue-example-app/ .
 
+ARG VUE_APP_COVID_MAP_BASEMAP_PROVIDER
+ENV VUE_APP_COVID_MAP_BASEMAP_PROVIDER ${VUE_APP_COVID_MAP_BASEMAP_PROVIDER}
 ARG VUE_APP_COVID_MAP_RADIUS
 ENV VUE_APP_COVID_MAP_RADIUS ${VUE_APP_COVID_MAP_RADIUS}
+ARG VUE_APP_COVID_MAP_GEOCODE_PROVIDER
+ENV VUE_APP_COVID_MAP_GEOCODE_PROVIDER ${VUE_APP_COVID_MAP_GEOCODE_PROVIDER}
+ARG VUE_APP_COVID_MAP_VICMAP_API_KEY
+ENV VUE_APP_COVID_MAP_VICMAP_API_KEY ${VUE_APP_COVID_MAP_VICMAP_API_KEY}
 
 # build app for production with minification
 RUN yarn build
