feat: make map label configure

--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -24,6 +24,8 @@ ARG VUE_APP_COVID_MAP_GEOCODE_PROVIDER
 ENV VUE_APP_COVID_MAP_GEOCODE_PROVIDER ${VUE_APP_COVID_MAP_GEOCODE_PROVIDER}
 ARG VUE_APP_COVID_MAP_VICMAP_API_KEY
 ENV VUE_APP_COVID_MAP_VICMAP_API_KEY ${VUE_APP_COVID_MAP_VICMAP_API_KEY}
+ARG VUE_APP_COVID_MAP_LABEL
+ENV VUE_APP_COVID_MAP_LABEL ${VUE_APP_COVID_MAP_LABEL}
 
 # build app for production with minification
 RUN yarn build
