apply changes from old PR#90

--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -14,26 +14,31 @@
     "test:smoke": "cross-env TEST=1 start-server-and-test serve http://localhost:3000 cy:run-smoke"
   },
   "dependencies": {
+    "@dpc-sdp/myvic-address-search-map": "1.9.9",
+    "@dpc-sdp/myvic-bar-chart": "1.9.9",
+    "@dpc-sdp/myvic-data-block": "1.9.9",
+    "@dpc-sdp/myvic-global": "1.9.9",
+    "@dpc-sdp/myvic-line-chart": "1.9.9",
+    "@dpc-sdp/myvic-map-core": "1.9.9",
+    "@dpc-sdp/myvic-pie-chart": "1.9.9",
+    "@dpc-sdp/myvic-treemap": "1.9.9",
+    "@dpc-sdp/ripple-card": "^1.8.0",
     "@dpc-sdp/ripple-global": "^1.8.0",
+    "@dpc-sdp/ripple-grants": "^1.8.0",
     "@dpc-sdp/ripple-grid": "^1.8.0",
     "@dpc-sdp/ripple-layout": "^1.8.0",
+    "@dpc-sdp/ripple-responsive-img": "^1.22.0",
     "@dpc-sdp/ripple-site-header": "^1.8.0",
-    "@dpc-sdp/myvic-address-search-map": "1.9.5",
-    "@dpc-sdp/myvic-bar-chart": "1.9.5",
-    "@dpc-sdp/myvic-line-chart": "1.9.5",
-    "@dpc-sdp/myvic-pie-chart": "1.9.5",
-    "@dpc-sdp/myvic-treemap": "1.9.5",
-    "@dpc-sdp/myvic-data-block": "1.9.5",
-    "@dpc-sdp/myvic-map-core": "1.9.5",
-    "@dpc-sdp/myvic-global": "1.9.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "cypress": "^4.9.0",
     "@vue/cli-plugin-babel": "~4.4.6",
     "@vue/cli-plugin-eslint": "~4.4.6",
+    "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-service": "~4.4.6",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
