--- a/packages/LineChart/package.json
+++ b/packages/LineChart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-line-chart",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A line chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,10 +10,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/myvic-global": "2.0.0",
+    "@dpc-sdp/myvic-global": "2.0.1",
     "chart.js": "2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "lodash.merge": "^4.6.2",
     "vue-chartjs": "^3.5.0"
-  }
+  },
+  "gitHead": "9a9ad1eba988b0a55c85457b24bf862cdf487701"
 }
