--- a/packages/AddressSearchMap/package.json
+++ b/packages/AddressSearchMap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-address-search-map",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Address search with map",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,9 +10,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/myvic-addresssearch": "2.0.0",
-    "@dpc-sdp/myvic-global": "2.0.0",
-    "@dpc-sdp/myvic-map-core": "2.0.0",
+    "@dpc-sdp/myvic-addresssearch": "2.0.1",
+    "@dpc-sdp/myvic-global": "2.0.1",
+    "@dpc-sdp/myvic-map-core": "2.0.1",
     "node-fetch": "^2.6.0"
-  }
+  },
+  "gitHead": "9a9ad1eba988b0a55c85457b24bf862cdf487701"
 }
