--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-bundle",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Bundle (UMD) of MyVictoria components",
   "license": "Apache-2.0",
   "main": "dist/myvic-bundle.js",
@@ -14,18 +14,18 @@
     "build-analyze": "cross-env BUNDLE_ANALYZE=1 webpack"
   },
   "dependencies": {
-    "@dpc-sdp/myvic-addresssearch": "2.0.0",
-    "@dpc-sdp/myvic-areasearch": "2.0.0",
-    "@dpc-sdp/myvic-autocomplete": "2.0.0",
-    "@dpc-sdp/myvic-bar-chart": "2.0.0",
-    "@dpc-sdp/myvic-data-block": "2.0.0",
-    "@dpc-sdp/myvic-examples": "2.0.0",
-    "@dpc-sdp/myvic-global": "2.0.0",
-    "@dpc-sdp/myvic-line-chart": "2.0.0",
-    "@dpc-sdp/myvic-map-core": "2.0.0",
-    "@dpc-sdp/myvic-pie-chart": "2.0.0",
-    "@dpc-sdp/myvic-toggle-list": "2.0.0",
-    "@dpc-sdp/myvic-treemap": "2.0.0",
+    "@dpc-sdp/myvic-addresssearch": "2.0.1",
+    "@dpc-sdp/myvic-areasearch": "2.0.1",
+    "@dpc-sdp/myvic-autocomplete": "2.0.1",
+    "@dpc-sdp/myvic-bar-chart": "2.0.1",
+    "@dpc-sdp/myvic-data-block": "2.0.1",
+    "@dpc-sdp/myvic-examples": "2.0.1",
+    "@dpc-sdp/myvic-global": "2.0.1",
+    "@dpc-sdp/myvic-line-chart": "2.0.1",
+    "@dpc-sdp/myvic-map-core": "2.0.1",
+    "@dpc-sdp/myvic-pie-chart": "2.0.1",
+    "@dpc-sdp/myvic-toggle-list": "2.0.1",
+    "@dpc-sdp/myvic-treemap": "2.0.1",
     "@dpc-sdp/ripple-global": "^1.8.0",
     "babel-polyfill": "6.26.0",
     "whatwg-fetch": "3.2.0"
@@ -39,5 +39,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "gitHead": "9a9ad1eba988b0a55c85457b24bf862cdf487701"
 }
