--- a/packages/ToggleList/package.json
+++ b/packages/ToggleList/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-toggle-list",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A toggle list component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,6 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/myvic-global": "2.0.0"
-  }
+    "@dpc-sdp/myvic-global": "2.0.1"
+  },
+  "gitHead": "9a9ad1eba988b0a55c85457b24bf862cdf487701"
 }
