--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-global",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Core package for My Victoria components",
   "main": "index.js",
   "license": "Apache-2.0",
@@ -12,5 +12,6 @@
   "dependencies": {
     "@dpc-sdp/ripple-global": "^1.8.0",
     "axios": "^0.21.1"
-  }
+  },
+  "gitHead": "9a9ad1eba988b0a55c85457b24bf862cdf487701"
 }
