--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-bundle",
-  "version": "2.2.11",
+  "version": "2.2.12-alpha.0",
   "description": "Bundle (UMD) of MyVictoria components",
   "license": "Apache-2.0",
   "main": "dist/myvic-bundle.js",
@@ -19,10 +19,10 @@
     "@dpc-sdp/myvic-autocomplete": "2.2.11",
     "@dpc-sdp/myvic-bar-chart": "2.2.11",
     "@dpc-sdp/myvic-data-block": "2.2.11",
-    "@dpc-sdp/myvic-examples": "2.2.11",
+    "@dpc-sdp/myvic-examples": "2.2.12-alpha.0",
     "@dpc-sdp/myvic-global": "2.2.11",
     "@dpc-sdp/myvic-line-chart": "2.2.11",
-    "@dpc-sdp/myvic-map-core": "2.2.11",
+    "@dpc-sdp/myvic-map-core": "2.2.12-alpha.0",
     "@dpc-sdp/myvic-pie-chart": "2.2.11",
     "@dpc-sdp/myvic-toggle-list": "2.2.11",
     "@dpc-sdp/myvic-treemap": "2.2.11",
